fix: privileges page - tweak icon position and width, group name wrapping

--- a/public/less/admin/manage/privileges.less
+++ b/public/less/admin/manage/privileges.less
@@ -12,6 +12,10 @@
 	}
 
 	.privilege-table {
+		td:first-child {
+			white-space: nowrap;
+		}
+
 		td[data-delta="true"] > input {
 			&:after {
 				border-color: @state-success-text;
